--- a/scss/_photoTable.scss
+++ b/scss/_photoTable.scss
@@ -15,6 +15,9 @@
 }
 
 #photoTable {
+	display: none;
+	margin-top: 5%;
+
 	th {
 		color: white;
 	}
@@ -24,7 +27,7 @@
 	}
 
 	tr:nth-child(odd) {
-		background-color: lighten($lt-blue, 55%);
+		background-color: lighten($lt-blue, 60%);
 	}
 
 	thead tr:nth-child(1) {
@@ -34,7 +37,7 @@
 	img {
 		max-width: 100px;
 		min-width: 100px;
-		vertical-align: middle;
+		border: solid 3px white;
 	}
 
 	td {
