modify header with image

--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -29,7 +29,7 @@ form#searchForPhotos {
 	}
 
 	button {
-		background-color: $black;
+		background-color: $lt-blue;
 		color: white;
 		border: none;
 		padding: 15px;
