--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,7 +2,8 @@ footer {
 	margin-top: 5%;
 	margin-bottom: 3%;
 
-	ul {
+	ul,
+	p {
 		text-align: center;
 	}
 
@@ -21,9 +22,5 @@ footer {
 	li {
 		display: inline-block;
 		margin-right: 5%;
-	}
-
-	p {
-		text-align: center;
 	}
 }
